Move JRE 8 JRubies back to before Bullseye
It seems like there's an issue with JRE 8 + Debian bullseye, which is
what openjdk:8-jre is based on nowadays.

- jruby:9.2.18.0-jre8 was based on openjdk:8-jre-buster, moving it back
  to that
- jruby:9.2.8.0-jre was based on stretch but had no aarch64, so moving
  it to buster as well

Both `rake spec:httprb` and `rake spec:ethon` now pass on JRuby 9.2

--- a/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
+++ b/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
@@ -2,7 +2,7 @@
 #
 # openjdk:8-jre image is from https://github.com/docker-library/openjdk/blob/a0c4da867ddd1a11408b7ec5032f12130bdc5476/8/jre/bullseye/Dockerfile
 # note: docker-library/openjdk is deprecated, there is a later move to https://hub.docker.com/_/eclipse-temurin
-FROM openjdk:8-jre AS jruby-9.2.8.0-jre8
+FROM openjdk:8-jre-buster AS jruby-9.2.8.0-jre8
 
 RUN apt-get update && apt-get install -y libc6-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
