Use `mysql_native_password` authentication plugin
MySQL 8.0.4 changed the authentication set at user creation, defaulting
to `caching_sha2_password`, and client libs predating 8.0.3, which
includes MariaDB, cannot connect. MariaDB finally updated but took some
time to catch up, so there's a time gap. Another failure mode is when
client libs are built against GnuTLS.

MariaDB libs are what is installed by default, so when running against a
recently pulled MySQL 8 server, outdated clients will fail to connect.

This affects Ruby images in the following way:

- 2.1, 2.2, 2.3, 2.4: Authentication plugin 'caching_sha2_password'
  cannot be loaded
- 2.5, 2.6, 2.7: RSA Encryption not supported - caching_sha2_password
  plugin was built with GnuTLS support

This works around it by reverting to `mysql_native_password` as a
default.

We are warned about this now:

> 'default_authentication_plugin' is deprecated and will be removed in a
> future release. Please use authentication_policy instead

But `authentication_policy` appears to work differently. This will have
to do to get us out of the wood.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -378,6 +378,8 @@ services:
       - MYSQL_ROOT_PASSWORD=$TEST_MYSQL_ROOT_PASSWORD
       - MYSQL_PASSWORD=$TEST_MYSQL_PASSWORD
       - MYSQL_USER=$TEST_MYSQL_USER
+    command:
+      - '--default-authentication-plugin=mysql_native_password'
     expose:
       - "3306"
     ports:
