Add a few comments

--- a/.circleci/images/primary/Dockerfile-2.1.10
+++ b/.circleci/images/primary/Dockerfile-2.1.10
@@ -14,6 +14,7 @@ RUN mkdir -p /usr/local/etc \
 ENV RUBY_MAJOR 2.1
 ENV RUBY_VERSION 2.1.10
 ENV RUBY_DOWNLOAD_SHA256 5be9f8d5d29d252cd7f969ab7550e31bbb001feb4a83532301c0dd3b5006e148
+# TODO: update only once
 ENV RUBYGEMS_VERSION 2.6.12
 
 # some of ruby's build scripts are written in ruby
@@ -65,6 +66,7 @@ RUN set -ex \
   \
   && gem update --system "$RUBYGEMS_VERSION"
 
+# TODO: update only once
 ENV BUNDLER_VERSION 1.15.1
 
 RUN gem install bundler --version "$BUNDLER_VERSION"
@@ -123,6 +125,8 @@ RUN set -ex \
   && (docker version || true)
 
 # Install Docker Compose
+# Releases over there don't work as they need a more recent glibc than Stretch has: https://github.com/linuxserver/docker-docker-compose/releases/download/1.29.2-ls51
+# So we fall back to using stretch-backports which has 1.21
 RUN echo 'deb http://ftp.debian.org/debian stretch-backports main\ndeb-src http://ftp.debian.org/debian stretch-backports main' > /etc/apt/sources.list.d/stretch-backports.list \
   && apt-get update \
   && apt-get install -y docker-compose \
