--- a/.circleci/images/primary/Dockerfile-2.3.8
+++ b/.circleci/images/primary/Dockerfile-2.3.8
@@ -40,6 +40,8 @@ RUN set -ex \
   && (docker version || true)
 
 # Install Docker Compose
+# Releases over there don't work as they need a more recent glibc than Stretch has: https://github.com/linuxserver/docker-docker-compose/releases/download/1.29.2-ls51
+# So we fall back to using stretch-backports which has 1.21
 RUN echo 'deb http://ftp.debian.org/debian stretch-backports main\ndeb-src http://ftp.debian.org/debian stretch-backports main' > /etc/apt/sources.list.d/stretch-backports.list \
   && apt-get update \
   && apt-get install -y docker-compose \
