--- a/.circleci/images/primary/Dockerfile-2.5.9
+++ b/.circleci/images/primary/Dockerfile-2.5.9
@@ -1,4 +1,4 @@
-FROM ruby:2.5.9
+FROM ruby:2.5.9-buster
 
 # Make apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
@@ -48,10 +48,9 @@ RUN COMPOSE_URL="https://github.com/linuxserver/docker-docker-compose/releases/d
 RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases/latest | grep -i /dockerize-$(uname -s)-$(dpkg --print-architecture)\" | cut -d\" -f4) | install /dev/stdin /usr/local/bin/dockerize
 
 # Install RubyGems
-RUN gem update --system
 RUN mkdir -p "$GEM_HOME" && chmod -R 777 "$GEM_HOME"
 
-# Install RubyGems
+# Install RubyGems and Bundler
 RUN gem update --system
 RUN gem install bundler
 ENV BUNDLE_SILENCE_ROOT_WARNING 1
