--- a/.circleci/images/primary/Dockerfile-2.4.10
+++ b/.circleci/images/primary/Dockerfile-2.4.10
@@ -53,10 +53,9 @@ RUN echo 'deb http://ftp.debian.org/debian stretch-backports main\ndeb-src http:
 RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases/latest | grep -i /dockerize-$(uname -s)-$(dpkg --print-architecture)\" | cut -d\" -f4) | install /dev/stdin /usr/local/bin/dockerize
 
 # Install RubyGems
-RUN gem update --system
 RUN mkdir -p "$GEM_HOME" && chmod -R 777 "$GEM_HOME"
 
-# Install RubyGems
+# Install RubyGems and Bundler
 RUN gem update --system
 RUN gem install bundler
 ENV BUNDLE_SILENCE_ROOT_WARNING 1
