--- a/.circleci/images/primary/Dockerfile-2.1.10
+++ b/.circleci/images/primary/Dockerfile-2.1.10
@@ -14,8 +14,8 @@ RUN mkdir -p /usr/local/etc \
 ENV RUBY_MAJOR 2.1
 ENV RUBY_VERSION 2.1.10
 ENV RUBY_DOWNLOAD_SHA256 5be9f8d5d29d252cd7f969ab7550e31bbb001feb4a83532301c0dd3b5006e148
-# TODO: update only once
-ENV RUBYGEMS_VERSION 2.6.12
+ENV RUBYGEMS_VERSION 2.7.11
+ENV BUNDLER_VERSION 1.17.3
 
 # some of ruby's build scripts are written in ruby
 #   we purge system ruby later to make sure our final image uses what we just built
@@ -64,12 +64,9 @@ RUN set -ex \
   && cd / \
   && rm -r /usr/src/ruby \
   \
-  && gem update --system "$RUBYGEMS_VERSION"
-
-# TODO: update only once
-ENV BUNDLER_VERSION 1.15.1
-
-RUN gem install bundler --version "$BUNDLER_VERSION"
+  && gem update --system "$RUBYGEMS_VERSION" \
+  && gem install bundler --version "$BUNDLER_VERSION" --force \
+  && rm -r /root/.gem/
 
 # install things globally, for great justice
 # and don't create ".bundle" in all our apps
@@ -135,11 +132,6 @@ RUN echo 'deb http://ftp.debian.org/debian stretch-backports main\ndeb-src http:
 
 # Install Dockerize
 RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases/latest | grep -i /dockerize-$(uname -s)-$(dpkg --print-architecture)\" | cut -d\" -f4) | install /dev/stdin /usr/local/bin/dockerize
-
-# Install RubyGems
-RUN gem update --system 2.7.9
-RUN gem install bundler -v '1.17.3'
-ENV BUNDLE_SILENCE_ROOT_WARNING 1
 
 RUN mkdir /app
 WORKDIR /app
