--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -538,15 +538,15 @@ job_configuration:
     ruby_version: 'jruby-9.2.8.0'
     image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.8.0-dd
     resource_class_to_use: medium+
-  - &config-jruby-9_2-latest # More recent release of 9.2
+  - &config-jruby-9_2 # More recent release of 9.2
     <<: *filters_all_branches_and_tags
-    ruby_version: 'jruby-9.2.18.0'
-    image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.18.0-dd
+    ruby_version: 'jruby-9.2.21.0'
+    image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.21.0-dd
     resource_class_to_use: medium+
-  - &config-jruby-9_3-latest
+  - &config-jruby-9_3
     <<: *filters_all_branches_and_tags
-    ruby_version: 'jruby-9.3.4.0'
-    image: ghcr.io/datadog/dd-trace-rb/jruby:9.3.4.0-dd
+    ruby_version: 'jruby-9.3.9.0'
+    image: ghcr.io/datadog/dd-trace-rb/jruby:9.3.9.0-dd
     resource_class_to_use: medium+
   - &config-truffleruby-22_3_0
     <<: *filters_all_branches_and_tags
@@ -585,8 +585,8 @@ workflows:
             #- test-3.2
             # ADD NEW RUBIES HERE
             - test-jruby-9.2.8.0
-            - test-jruby-9.2-latest
-            - test-jruby-9.3-latest
+            - test-jruby-9.2
+            - test-jruby-9.3
             # soon™️ - test-truffleruby-22.3.0
       - orb/changelog:
           <<: *config-2_7-small
@@ -746,21 +746,21 @@ workflows:
           requires:
             - build-jruby-9.2.8.0
       - orb/build:
-          <<: *config-jruby-9_2-latest
-          name: build-jruby-9.2-latest
+          <<: *config-jruby-9_2
+          name: build-jruby-9.2
       - orb/test:
-          <<: *config-jruby-9_2-latest
-          name: test-jruby-9.2-latest
+          <<: *config-jruby-9_2
+          name: test-jruby-9.2
           requires:
-            - build-jruby-9.2-latest
+            - build-jruby-9.2
       - orb/build:
-          <<: *config-jruby-9_3-latest
-          name: build-jruby-9.3-latest
+          <<: *config-jruby-9_3
+          name: build-jruby-9.3
       - orb/test:
-          <<: *config-jruby-9_3-latest
-          name: test-jruby-9.3-latest
+          <<: *config-jruby-9_3
+          name: test-jruby-9.3
           requires:
-            - build-jruby-9.3-latest
+            - build-jruby-9.3
       # TruffleRuby
       # soon™️
       # - orb/build:
@@ -790,8 +790,8 @@ workflows:
             #- test-3.2
             # ADD NEW RUBIES HERE
             - test-jruby-9.2.8.0
-            - test-jruby-9.2-latest
-            - test-jruby-9.3-latest
+            - test-jruby-9.2
+            - test-jruby-9.3
             # soon™️ - test-truffleruby-22.3.0
       - "deploy release":
           <<: *filters_only_release_tags
@@ -811,8 +811,8 @@ workflows:
             #- test-3.2
             # ADD NEW RUBIES HERE
             - test-jruby-9.2.8.0
-            - test-jruby-9.2-latest
-            - test-jruby-9.3-latest
+            - test-jruby-9.2
+            - test-jruby-9.3
             # soon™️ - test-truffleruby-22.3.0
   # This workflow runs the same `build` and `test` jobs as above on a schedule.
   # Tasks related to housekeeping (e.g. prerelease) are not relevant
@@ -985,23 +985,23 @@ workflows:
           requires:
             - build-jruby-9.2.8.0
       - orb/build:
-          <<: *config-jruby-9_2-latest
-          name: build-jruby-9.2-latest
+          <<: *config-jruby-9_2
+          name: build-jruby-9.2
           edge: true
       - orb/test:
-          <<: *config-jruby-9_2-latest
-          name: test-jruby-9.2-latest
+          <<: *config-jruby-9_2
+          name: test-jruby-9.2
           requires:
-            - build-jruby-9.2-latest
+            - build-jruby-9.2
       - orb/build:
-          <<: *config-jruby-9_3-latest
-          name: build-jruby-9.3-latest
+          <<: *config-jruby-9_3
+          name: build-jruby-9.3
           edge: true
       - orb/test:
-          <<: *config-jruby-9_3-latest
-          name: test-jruby-9.3-latest
+          <<: *config-jruby-9_3
+          name: test-jruby-9.3
           requires:
-            - build-jruby-9.3-latest
+            - build-jruby-9.3
       # TruffleRuby
       # soon™️
       # - orb/build:
