--- a/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
+++ b/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
@@ -1,3 +1,12 @@
+# Note:
+#
+# There is an incompatibility between ethon and httprb on debian 11 bullseye.
+# This is why this image is based on debian 10 buster.
+#
+# See:
+# - https://github.com/jruby/jruby/issues/7033
+# - https://github.com/DataDog/dd-trace-rb/pull/2380#issuecomment-1320994823
+#
 # taken from https://github.com/jruby/docker-jruby/blob/5de2f8fd4c518cfb621be236fe7e9732c77b6129/9000/jre/Dockerfile
 #
 # openjdk:8-jre image is from https://github.com/docker-library/openjdk/blob/a0c4da867ddd1a11408b7ec5032f12130bdc5476/8/jre/bullseye/Dockerfile
