Add JRuby 9.4.0.0 image for dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -308,6 +308,27 @@ services:
       - .:/app
       - bundle-jruby-9.3:/usr/local/bundle
       - "ddagent_var_run:${TEST_DDAGENT_VAR_RUN}"
+  tracer-jruby-9.4:
+    image: ghcr.io/datadog/dd-trace-rb/jruby:9.4.0.0-dd
+    command: /bin/bash
+    depends_on:
+      - ddagent
+      - elasticsearch
+      - memcached
+      - mongodb
+      - mysql
+      - postgres
+      - presto
+      - redis
+      - redis_old
+    env_file: ./.env
+    environment: *common-environment
+    stdin_open: true
+    tty: true
+    volumes:
+      - .:/app
+      - bundle-jruby-9.4:/usr/local/bundle
+      - "ddagent_var_run:${TEST_DDAGENT_VAR_RUN}"
   # TruffleRuby
   tracer-truffleruby-22.3.0:
     image: ghcr.io/datadog/dd-trace-rb/truffleruby:22.3.0-dd
@@ -429,6 +450,7 @@ volumes:
   bundle-jruby-9.2.8.0:
   bundle-jruby-9.2:
   bundle-jruby-9.3:
+  bundle-jruby-9.4:
   bundle-truffleruby-22.3.0:
   ddagent_var_run:
   # Temporary folder used while compiling the profiling native extension. We place this in a volume to avoid the
