--- a/.github/workflows/build-ruby.yml
+++ b/.github/workflows/build-ruby.yml
@@ -60,6 +60,9 @@ jobs:
           - engine: jruby
             version: 9.3.9.0
             dockerfile: Dockerfile-jruby-9.3.9.0
+          - engine: jruby
+            version: 9.4.0.0
+            dockerfile: Dockerfile-jruby-9.4.0.0
           - engine: truffleruby
             version: 22.3.0
             dockerfile: Dockerfile-truffleruby-22.3.0
