Environment variable service_name for `presto`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,6 +179,7 @@ services:
       - mongodb
       - mysql
       - postgres
+      - presto
       - redis
       - redis_old
     env_file: ./.env
