--- a/.github/workflows/build-ruby.yml
+++ b/.github/workflows/build-ruby.yml
@@ -49,8 +49,8 @@ jobs:
             version: 3.1.2
             dockerfile: Dockerfile-3.1.2
           - engine: ruby
-            version: 3.2.0-preview3
-            dockerfile: Dockerfile-3.2.0-preview3
+            version: 3.2.0-rc1
+            dockerfile: Dockerfile-3.2.0-rc1
           - engine: jruby
             version: 9.2.21.0
             dockerfile: Dockerfile-jruby-9.2.21.0
