Lock gem upgrade version for ntegration tests

--- a/integration/images/ruby/3.2/Dockerfile
+++ b/integration/images/ruby/3.2/Dockerfile
@@ -41,11 +41,11 @@ ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 
 # Install RubyGems
-RUN gem update --system
+RUN gem update --system 3.4.1
 RUN mkdir -p "$GEM_HOME" && chmod -R 777 "$GEM_HOME"
 
 # Upgrade RubyGems and Bundler
-RUN gem update --system
+RUN gem update --system 3.4.1
 RUN gem install bundler
 ENV BUNDLE_SILENCE_ROOT_WARNING 1
 
