Use stable Ruby 3.2 when testing integration apps
**What does this PR do?**:

Update the integration apps `Dockerfile` for Ruby 3.2 to use the
latest stable release (3.2.0 as of this writing, but newer releases will
be automatically picked up).

**Motivation**:

Make sure integration apps are running fine on Ruby 3.2.

**Additional Notes**:

(N/A)

**How to test the change?**:

Run tests and check that Ruby 3.2.0 (or a latter version) are used.

--- a/integration/images/ruby/3.2/Dockerfile
+++ b/integration/images/ruby/3.2/Dockerfile
@@ -1,5 +1,4 @@
-# TODO: Replace this with 3.2 once the 3.2.0 stable release is out!
-FROM ruby:3.2-rc
+FROM ruby:3.2
 
 ENV DEBIAN_FRONTEND=noninteractive
 
