Document how to publish updates to test container images
**What does this PR do?**:

This PR adds a new section in the container images `README.md`
explaining the steps to publish new versions of the images, as well
as a quick note to every `Dockerfile` to remind people that the note in
the `README.md` exists.

**Motivation**:

Recently a change was merged, but not published, and I was a bit
confused on how to actually publish the images, so I made a note to come
back and document this, so hopefully this is clear for others and for a
next time.

**Additional Notes**:

(N/A)

**How to test the change?**:

Test the steps I've documented!

--- a/.circleci/images/primary/Dockerfile-2.1.10
+++ b/.circleci/images/primary/Dockerfile-2.1.10
@@ -1,6 +1,8 @@
 # ruby:2.1.10 was based on jessie, but never got a aarch64 image
 # aarch64 used to be supported upon release but is not part of LTS, so archive.debian.org does not contain aarch64: https://www.debian.org/releases/jessie/
 
+# Note: See the "Publishing updates to images" note in ./README.md for how to publish new builds of this container image
+
 # taken from https://github.com/docker-library/ruby/blob/c5693b25aa865489fee130e572a3f11bccebd21b/2.1/Dockerfile
 FROM buildpack-deps:stretch AS ruby-2.1.10-stretch
 
