--- a/.circleci/images/primary/Dockerfile-3.0.4
+++ b/.circleci/images/primary/Dockerfile-3.0.4
@@ -1,3 +1,5 @@
+# Note: See the "Publishing updates to images" note in ./README.md for how to publish new builds of this container image
+
 FROM ruby:3.0.4-bullseye
 
 # Make apt non-interactive
