--- a/.circleci/images/primary/Dockerfile-2.4.10
+++ b/.circleci/images/primary/Dockerfile-2.4.10
@@ -1,3 +1,5 @@
+# Note: See the "Publishing updates to images" note in ./README.md for how to publish new builds of this container image
+
 FROM ruby:2.4.10-buster
 
 # Make apt non-interactive
