--- a/.circleci/images/primary/Dockerfile-jruby-9.2.21.0
+++ b/.circleci/images/primary/Dockerfile-jruby-9.2.21.0
@@ -6,7 +6,9 @@
 # See:
 # - https://github.com/jruby/jruby/issues/7033
 # - https://github.com/DataDog/dd-trace-rb/pull/2380#issuecomment-1320994823
-#
+
+# Note: See the "Publishing updates to images" note in ./README.md for how to publish new builds of this container image
+
 # openjdk:8-jre image is from https://github.com/docker-library/openjdk/blob/a0c4da867ddd1a11408b7ec5032f12130bdc5476/8/jre/buster/Dockerfile
 # note: docker-library/openjdk is deprecated, there is a later move to https://hub.docker.com/_/eclipse-temurin
 FROM openjdk:8-jre-buster AS jruby-9.2.21.0-jre8
