Add missing dependency on presto for Ruby 3.1/3.2 images
Otherwise the presto specs always fail.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -225,6 +225,7 @@ services:
       - mongodb
       - mysql
       - postgres
+      - presto
       - redis
       - redis_old
     env_file: ./.env
@@ -248,6 +249,7 @@ services:
       - mongodb
       - mysql
       - postgres
+      - presto
       - redis
       - redis_old
     env_file: ./.env
