[PROF-7172] Experiment to disable scheduler shutdown

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ test_containers:
     DD_INSTRUMENTATION_TELEMETRY_ENABLED: false
     TEST_REDIS_OLD_HOST: redis_old
     DDTRACE_CI: true
+    DD_PROFILING_NO_SHUTDOWN_WORKAROUND: true
   - &container_parameters_environment
     - *container_base_environment
     - TEST_DATADOG_INTEGRATION: 1
