--- a/.github/workflows/lib-injection.yml
+++ b/.github/workflows/lib-injection.yml
@@ -4,12 +4,22 @@ on:
   push:
 
 jobs:
+  # build-and-publish-release-image:
+  #   uses: ./.github/workflows/build-and-publish-image.yml
+  #   with:
+  #     tags: 'ghcr.io/datadog/dd-trace-rb/dd-lib-ruby-init:${{ github.sha }}'
+  #     platforms: 'linux/amd64,linux/arm64/v8'
+  #     build-args: 'DDTRACE_RUBY_VERSION=${{input.version}}'
+  #     context: ./lib-injection
+  #   secrets:
+  #     token: ${{ secrets.GITHUB_TOKEN }}
+
   build-and-publish-test-image:
     uses: ./.github/workflows/build-and-publish-image.yml
     with:
       tags: 'ghcr.io/datadog/dd-trace-rb/dd-lib-ruby-init:${{ github.sha }}'
       platforms: 'linux/amd64,linux/arm64/v8'
-      build-args: 'DDTRACE_RUBY_VERSION=git+https://github.com/Datadog/dd-trace-rb@${{ github.sha }}'
+      build-args: 'DDTRACE_RUBY_SHA=${{ github.sha }}'
       context: ./lib-injection
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
