Configure "Test macOS" github action to install latest bundler
The default bundler version in Ruby 3.0 and 3.1 has a conflict with
steep 1.3.1:

```
/Users/runner/hostedtoolcache/Ruby/3.1.3/x64/lib/ruby/3.1.0/bundler/runtime.rb:308:in `check_for_activated_spec!': You have already activated pathname 0.2.0, but your Gemfile requires pathname 0.2.1. Since pathname is a default gem, you can either remove your dependency on it or try updating to a newer version of bundler that supports pathname as a default gem. (Gem::LoadError)
```

By upgrading to the latest bundler, this issue should be fixed.

--- a/.github/workflows/test-macos.yaml
+++ b/.github/workflows/test-macos.yaml
@@ -35,4 +35,5 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          bundler: latest # needed to fix issue with steep on Ruby 3.0/3.1
       - run: bundle exec rake spec:main
