get opensearch code, specs, and duplicate most ES references

--- a/.env
+++ b/.env
@@ -21,6 +21,9 @@ TEST_MYSQL_PASSWORD=mysql
 TEST_MYSQL_PORT=3306
 TEST_MYSQL_ROOT_PASSWORD=root
 TEST_MYSQL_USER=mysql
+TEST_OPENSEARCH_HOST=127.0.0.1
+TEST_OPENSEARCH_NATIVE_PORT=9300
+TEST_OPENSEARCH_REST_PORT=9200
 TEST_POSTGRES_DB=postgres
 TEST_POSTGRES_HOST=127.0.0.1
 TEST_POSTGRES_PASSWORD=postgres
